--- a/src/app/payment/paypal-payment-proxy/paypal-payment-proxy.component.html
+++ b/src/app/payment/paypal-payment-proxy/paypal-payment-proxy.component.html
@@ -7,7 +7,7 @@
 
   <div class="col-12"  *ngIf="reservation && reservation.tokenAcquired">
     <div class="alert alert-success wMarginBottom wMarginTop">
-      <h3><fa-icon [icon]="['fas', 'check']"></fa-icon>{{' '}}<span translate="reservation-page.paypal.confirm"></span></h3>
+      <h3><fa-icon [icon]="['fas', 'check']" a11yRole="presentation"></fa-icon>{{' '}}<span translate="reservation-page.paypal.confirm"></span></h3>
     </div>
   </div>
 </div>
