--- a/src/app/reservation/booking/booking.component.html
+++ b/src/app/reservation/booking/booking.component.html
@@ -78,7 +78,7 @@
                             [ngbTooltip]="'reservation-page.copy-attendee'|translate"
                             type="button"
                             (click)="copyContactInfoTo(ticket)">
-                      <fa-icon [icon]="['far', 'clone']"></fa-icon>
+                      <fa-icon [icon]="['far', 'clone']" a11yRole="presentation"></fa-icon>
                       <span class="sr-only" translate="reservation-page.copy-attendee"></span>
                     </button>
                   </div>
