--- a/src/app/reservation/release-ticket/release-ticket.html
+++ b/src/app/reservation/release-ticket/release-ticket.html
@@ -1,5 +1,5 @@
 <div class="modal-body text-center">
-    <h4 class="modal-title text-danger text-center"><fa-icon [icon]="['fas', 'exclamation-triangle']"></fa-icon>{{' '}}{{'reservation-page-complete.confirm-cancellation.text' | translate}}</h4>
+    <h4 class="modal-title text-danger text-center"><fa-icon [icon]="['fas', 'exclamation-triangle']" a11yRole="presentation"></fa-icon>{{' '}}{{'reservation-page-complete.confirm-cancellation.text' | translate}}</h4>
     <hr/>
     <div class="row">
         <div class="col-6">
