--- a/src/app/reservation/expired-notification/reservation-expired.component.html
+++ b/src/app/reservation/expired-notification/reservation-expired.component.html
@@ -1,5 +1,5 @@
 <div class="modal-body text-center">
-    <h4 class="modal-title text-danger text-center"><fa-icon [icon]="['far', 'clock']"></fa-icon>{{' '}}{{'session-expired.header.title' | translate}}</h4>
+    <h4 class="modal-title text-danger text-center"><fa-icon [icon]="['far', 'clock']" a11yRole="presentation"></fa-icon>{{' '}}{{'session-expired.header.title' | translate}}</h4>
     <hr/>
     <div class="row">
         <div class="col-6 offset-3">
