--- a/src/app/reservation/processing-payment/processing-payment.component.html
+++ b/src/app/reservation/processing-payment/processing-payment.component.html
@@ -10,9 +10,10 @@
 
   <app-summary-table [event]="event" [reservationInfo]="reservationInfo"></app-summary-table>
 
-  <div class="alert alert-info text-center">
-    <h4><fa-icon [icon]="['fas', 'cog']" [spin]="true" a11yRole="presentation"></fa-icon>{{' '}}<span translate="reservation.payment-in-progress"></span></h4>
-    <button class="btn btn-default" translate="reservation.payment-processing.force-check" (click)="forceCheck()" *ngIf="forceCheckVisible"></button>
+  <div class="alert text-center" [ngClass]="{'alert-info': !providerWarningVisible, 'alert-warning': providerWarningVisible}">
+    <div class="h5" *ngIf="!forceCheckVisible && !providerWarningVisible"><span translate="reservation.payment-in-progress"></span><app-animated-dots></app-animated-dots></div>
+    <div class="h5" *ngIf="forceCheckVisible || providerWarningVisible"><span>{{ (providerWarningVisible ? 'reservation.payment-processing.warning.message' : 'reservation.payment-processing.delay.message') | translate }}</span><app-animated-dots></app-animated-dots></div>
+    <div class="text-center" *ngIf="forceCheckVisible"><button class="btn btn-default ml-5" translate="reservation.payment-processing.force-check" (click)="forceCheck()"></button></div>
   </div>
 </div>
 
