--- a/src/app/reservation/overview/overview.component.html
+++ b/src/app/reservation/overview/overview.component.html
@@ -57,9 +57,12 @@
     </div>
 
     <div class="alert mt-3 mb-3 text-center" role="alert" *ngIf="submitting" [class.alert-warning]="paymentStatusNotification && paymentStatusNotification.indeterminate">
+      <div class="progress mb-3">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" [class.bg-warning]="paymentStatusNotification && paymentStatusNotification.indeterminate" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+      </div>
       <strong *ngIf="!paymentStatusNotification"><span translate="reservation.payment-in-progress"></span><app-animated-dots></app-animated-dots></strong>
       <strong *ngIf="paymentStatusNotification"><span>{{ (paymentStatusNotification.indeterminate ? 'reservation.payment-processing.warning.message' : 'reservation.payment-processing.delay.message') | translate }}</span><app-animated-dots></app-animated-dots></strong>
-      <div class="text-center mt-2" *ngIf="paymentStatusNotification && !paymentStatusNotification.indeterminate">
+      <div class="text-center mt-3" *ngIf="paymentStatusNotification && !paymentStatusNotification.indeterminate">
         <button class="btn btn-default" translate="reservation.payment-processing.force-check" (click)="forceCheck()"></button>
       </div>
     </div>
