support online events

--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -5,10 +5,10 @@
     <hr>
 
     <div class="row">
-        <div [ngClass]="{'col-md-7': event.mapUrl, 'col-md-12': !event.mapUrl}">
+        <div [ngClass]="{'col-md-7': displayMap, 'col-md-12': !displayMap}">
           <app-event-summary [event]="event" [dateValidityProvider]="event"></app-event-summary>
         </div>
-        <div class="col-md-5" *ngIf="event.mapUrl"><img [src]="event.mapUrl" class="img-responsive margin-auto" [alt]="event.location"></div>
+        <div class="col-md-5" *ngIf="displayMap"><img [src]="event.mapUrl" class="img-responsive margin-auto" [alt]="event.location"></div>
     </div>
 
     <hr>
