--- a/src/app/view-ticket/view-ticket.component.html
+++ b/src/app/view-ticket/view-ticket.component.html
@@ -33,7 +33,7 @@
           <h3 translate="ticket.payment-required"></h3>
       </div>
 
-      <div class="row">
+      <div class="row" *ngIf="event.format !== 'ONLINE'">
           <div class="col-md-4 offset-md-8 col-12">
                 <a [attr.href]="'/api/v2/public/event/' + event.shortName + '/ticket/' + ticketInfo.uuid + '/download-ticket'" class="btn btn-success btn-block">
                     <fa-icon [icon]="['fas', 'download']" a11yRole="presentation"></fa-icon>
@@ -41,7 +41,7 @@
                 </a>
           </div>
       </div>
-      
+
   </div>
 </main>
 </div>
