--- a/src/app/event-summary/event-summary.component.html
+++ b/src/app/event-summary/event-summary.component.html
@@ -31,9 +31,9 @@
           &nbsp;&ndash;&nbsp;
           <a target="_blank" href="/api/v2/public/event/{{event.shortName}}/calendar/{{translate.currentLang}}">iCalendar</a>
         </dd>
-        <dt class="col-1 text-muted"><fa-icon [icon]="['far', 'compass']" [title]="'ticket.location' | translate"></fa-icon></dt>
-        <dd class="col-11">{{event.location}}</dd>
-        
+        <dt class="col-1 text-muted"><fa-icon [icon]="['far', 'compass']" [title]="(isEventOnline ? 'event.location.online' : 'ticket.location') | translate"></fa-icon></dt>
+        <dd class="col-11">{{(isEventOnline ? 'event.location.online' : 'ticket.location') | translate}}</dd>
+
     </dl>
   </div>
 </div>
