--- a/src/app/reservation/invoice-form/invoice-form.component.html
+++ b/src/app/reservation/invoice-form/invoice-form.component.html
@@ -73,7 +73,7 @@
                         [items]="countries" bindLabel="name" bindValue="isoCode" selectOnTab="true"
                         formControlName="vatCountryCode" class="form-control field-required" 
                         [searchFn]="searchCountry" required appInvalidFeedback
-                        labelForId="vatCountry" aria-labelledby="vatCountryLabel">
+                        labelForId="vatCountry" aria-labelledby="vatCountryLabel" [inputAttrs]="{autocomplete: 'nope'}">
                   <ng-template ng-option-tmp let-item="item">{{item.name}} ({{item.isoCode}})</ng-template>
                   <ng-template ng-label-tmp let-item="item">{{item.name}} ({{item.isoCode}})</ng-template>
                   <ng-template ng-notfound-tmp let-searchTerm="searchTerm"></ng-template>
