--- a/src/app/event-list/event-list.component.scss
+++ b/src/app/event-list/event-list.component.scss
@@ -21,3 +21,9 @@ a.no-decoration:hover {
 .event-card:hover {
     box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
 }
+
+.online-flag {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
