show online check-in status

--- a/src/app/reservation/success/success.component.html
+++ b/src/app/reservation/success/success.component.html
@@ -53,7 +53,7 @@
         <hr *ngIf="!ticketFormVisible">
 
         <div class="row justify-content-end" *ngIf="!ticketFormVisible">
-          <div class="col-lg-3 col-sm-6 col-12 mb-2" *ngIf="ticket.assigned && !ticket.cancellationEnabled" >
+          <div class="col-lg-3 col-sm-6 col-12 mb-2" *ngIf="!isEventOnline && ticket.assigned && !ticket.cancellationEnabled" >
             <a [routerLink]="['/event', event.shortName, 'ticket', ticket.uuid, 'view']" target="_blank" class="btn btn-default btn-block"><fa-icon [icon]="['fas', 'search-plus']" a11yRole="presentation"></fa-icon> {{'reservation-page-complete.show-ticket'|translate}}</a>
           </div>
           <div class="col-lg-3 col-sm-6 col-12 mt-2 mt-md-0 mb-2" *ngIf="!isEventOnline && ticket.assigned">
