--- a/src/app/update-ticket/update-ticket.component.html
+++ b/src/app/update-ticket/update-ticket.component.html
@@ -3,6 +3,12 @@
         <app-event-header [event]="event"></app-event-header>
     </header>
     <main class="mt-5">
+        <div class="alert mb-5" [ngClass]="{'alert-info': !ticket.onlineEventStarted, 'alert-success': ticket.onlineEventStarted}" *ngIf="isEventOnline && !ticketFormVisible">
+          <div class="font-weight-bold text-center">
+            <span *ngIf="!ticket.onlineEventStarted">{{'event.online.not-started' | translate:{ '0' : ticketOnlineCheckInDate } }}</span>
+            <span *ngIf="ticket.onlineEventStarted">{{'event.online.started' | translate }}</span>
+          </div>
+        </div>
         <h2>{{'show-ticket.header.title' | translate:{ '0' : event.displayName } }}</h2>
         <div class="card mt-5" [ngClass]="{'border-left-warning': !ticket.assigned}">
             <div class="card-body">
@@ -11,14 +17,14 @@
                 <h3 class="card-title flex-md-shrink-0" *ngIf="ticket.assigned">{{ticket.fullName}}</h3>
                 <h3 class="card-title text-muted" *ngIf="!ticket.assigned">{{'reservation-page-complete.ticket-not-assigned' | translate }}</h3>
               </div>
-              
+
               <hr *ngIf="!ticketFormVisible">
-      
-              <div class="row" *ngIf="!ticketFormVisible">
-                <div class="col-lg-3 col-sm-6 col-12 mb-2" *ngIf="ticket.assigned && !ticket.cancellationEnabled" >
+
+              <div class="row justify-content-end" *ngIf="!ticketFormVisible">
+                <div class="col-lg-3 col-sm-6 col-12 mb-2" *ngIf="!isEventOnline && ticket.assigned && !ticket.cancellationEnabled" >
                   <a [routerLink]="['/event', event.shortName, 'ticket', ticket.uuid, 'view']" target="_blank" class="btn btn-default btn-block"><fa-icon [icon]="['fas', 'search-plus']" a11yRole="presentation"></fa-icon> {{'reservation-page-complete.show-ticket'|translate}}</a>
                 </div>
-                <div class="col-lg-3 col-sm-6 col-12 mt-2 mt-md-0 mb-2" *ngIf="ticket.assigned">
+                <div class="col-lg-3 col-sm-6 col-12 mt-2 mt-md-0 mb-2" *ngIf="!isEventOnline && ticket.assigned">
                   <a [attr.href]="'/api/v2/public/event/' + event.shortName + '/ticket/' + ticket.uuid + '/download-ticket'" class="btn btn-default btn-block"><fa-icon [icon]="['fas', 'download']" a11yRole="presentation"></fa-icon> {{'reservation-page-complete.download-ticket'|translate}}</a>
                 </div>
                 <div class="col-lg-3 col-sm-6 col-12 mt-2 mt-md-0 mb-2" *ngIf="ticket.assigned">
@@ -31,7 +37,7 @@
                   <button type="button" class="btn btn-danger btn-block" (click)="releaseTicket()"><fa-icon [icon]="['fas', 'eraser']" a11yRole="presentation"></fa-icon> {{'reservation-page-complete.release-button.text'|translate}}</button>
                 </div>
               </div>
-              
+
               <div class="mt-4" *ngIf="ticketFormVisible">
                 <div class="alert alert-info" translate="reservation-page-complete.info-update" *ngIf="event.assignmentConfiguration.enableTicketTransfer && ticket.assigned && !ticket.locked"></div>
                 <form [formGroup]="formGroup" (submit)="updateTicket()">
@@ -39,7 +45,7 @@
                     <div class="bg-white pb-3 pt-3" [class.sticky]="ticket.ticketFieldConfigurationAfterStandard.length > 0">
                       <div class="row d-flex justify-content-between">
                         <div class="col-md-5 order-md-1 col-12">
-                          <button type="submit" class="btn btn-success btn-block">{{ (ticket.assigned ? 'reservation-page-complete.update' : 'reservation-page-complete.assign') | translate}}</button>
+                          <button type="submit" class="btn btn-success btn-block" *ngIf="canUpdateTicket">{{ (ticket.assigned ? 'reservation-page-complete.update' : 'reservation-page-complete.assign') | translate}}</button>
                         </div>
                         <div class="col-md-5 mt-2 mt-md-0 order-md-0 col-12">
                           <button type="button" (click)="ticketFormVisible = false" translate="reservation-page-complete.cancel" class="btn btn-light btn-block"></button>
@@ -48,7 +54,7 @@
                     </div>
                 </form>
               </div>
-        
+
               <div class="alert alert-success mt-2 mb-2 hidden alert-dismissible" role="alert" *ngIf="emailSent">
                 <button type="button" class="close" (click)="emailSent = false"><span aria-hidden="true">&times;</span><span class="sr-only" translate="reservation-page-complete.cancel"></span></button>
                 <strong translate="email.ticket-email-sent"></strong>
