fix discount error "formControlName must be used with a parent formGroup directive." added event startTime-endTime in eventlist main page for online events only

--- a/src/app/event-display/event-display.component.html
+++ b/src/app/event-display/event-display.component.html
@@ -180,7 +180,7 @@
           </button>
         </div>
         <div *ngIf="displayPromoCodeForm" class="mt-2">
-          <ng-form [formGroup]="promoCodeForm">
+          <form [formGroup]="promoCodeForm">
             <div class="form-row">
               <div class="col-12 col-md-6 offset-md-1">
                 <div class="form-group">
@@ -194,7 +194,7 @@
                 <button class="btn btn-light ml-2" translate="reservation-page-complete.cancel" type="button" (click)="togglePromoCodeVisible()"></button>
               </div>
             </div>
-          </ng-form>
+          </form>
         </div>
       </div>
 
