--- a/src/app/update-ticket/update-ticket.component.html
+++ b/src/app/update-ticket/update-ticket.component.html
@@ -3,10 +3,11 @@
         <app-event-header [event]="event"></app-event-header>
     </header>
     <main class="mt-5">
-        <div class="alert mb-5" [ngClass]="{'alert-info': !ticket.onlineEventStarted, 'alert-success': ticket.onlineEventStarted}" *ngIf="isEventOnline && !ticketFormVisible">
+        <div class="alert mb-5" [ngClass]="{'alert-danger': eventExpired, 'alert-info': !eventExpired && !ticket.onlineEventStarted, 'alert-success': !eventExpired && ticket.onlineEventStarted}" *ngIf="isEventOnline && !ticketFormVisible">
           <div class="font-weight-bold text-center">
-            <span *ngIf="!ticket.onlineEventStarted">{{'event.online.not-started' | translate:{ '0' : ticketOnlineCheckInDate } }}</span>
-            <span *ngIf="ticket.onlineEventStarted">{{'event.online.started' | translate }}</span>
+            <span *ngIf="!eventExpired && !ticket.onlineEventStarted">{{'event.online.not-started' | translate:{ '0' : ticketOnlineCheckInDate } }}</span>
+            <span *ngIf="!eventExpired && ticket.onlineEventStarted">{{'event.online.started' | translate }}</span>
+            <span *ngIf="eventExpired">{{'event.online.expired' | translate }}</span>
           </div>
         </div>
         <h2>{{'show-ticket.header.title' | translate:{ '0' : event.displayName } }}</h2>
@@ -18,9 +19,9 @@
                 <h3 class="card-title text-muted" *ngIf="!ticket.assigned">{{'reservation-page-complete.ticket-not-assigned' | translate }}</h3>
               </div>
 
-              <hr *ngIf="!ticketFormVisible">
+              <hr *ngIf="!eventExpired && !ticketFormVisible">
 
-              <div class="row justify-content-end" *ngIf="!ticketFormVisible">
+              <div class="row justify-content-end" *ngIf="!eventExpired && !ticketFormVisible">
                 <div class="col-lg-3 col-sm-6 col-12 mb-2" *ngIf="!isEventOnline && ticket.assigned && !ticket.cancellationEnabled" >
                   <a [routerLink]="['/event', event.shortName, 'ticket', ticket.uuid, 'view']" target="_blank" class="btn btn-default btn-block"><fa-icon [icon]="['fas', 'search-plus']" a11yRole="presentation"></fa-icon> {{'reservation-page-complete.show-ticket'|translate}}</a>
                 </div>
@@ -38,7 +39,7 @@
                 </div>
               </div>
 
-              <div class="mt-4" *ngIf="ticketFormVisible">
+              <div class="mt-4" *ngIf="!eventExpired && ticketFormVisible">
                 <div class="alert alert-info" translate="reservation-page-complete.info-update" *ngIf="event.assignmentConfiguration.enableTicketTransfer && ticket.assigned && !ticket.locked"></div>
                 <form [formGroup]="formGroup" (submit)="updateTicket()">
                     <app-ticket-form [ticket]="ticket" [event]="event" [form]="formGroup"></app-ticket-form>
