--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -5,3 +5,5 @@
     <input formControlName="pin">
     <button class="btn btn-primary" type="submit">Confirm</button>
 </form>
+
+<pre>{{polls|json}}</pre>
