--- a/src/app/poll/display-poll/display-poll.component.html
+++ b/src/app/poll/display-poll/display-poll.component.html
@@ -1,7 +1,8 @@
 <div *ngIf="poll">
     <h2>{{poll.poll.title[translate.currentLang]}}</h2>
     <p>{{poll.poll.description[translate.currentLang]}}</p>
-    <form [formGroup]="pollForm" (submit)="submitChoice()">
+    <div *ngIf="pollSubmittedWithSuccess" class="alert alert-success">Thank you for the vote!</div>
+    <form [formGroup]="pollForm" (submit)="submitChoice()" *ngIf="!pollSubmittedWithSuccess">
         <ol>
             <li *ngFor="let option of poll.options">
                 <label>
