--- a/src/app/poll/poll-selection/poll-selection.component.html
+++ b/src/app/poll/poll-selection/poll-selection.component.html
@@ -1,6 +1,8 @@
-<form [formGroup]="pinForm" (submit)="confirmPin()" *ngIf="!polls">
-    <input formControlName="pin">
-    <button class="btn btn-primary" type="submit">{{'show-event.continue'|translate}}</button>
+<h2>Poll</h2>
+<form [formGroup]="pinForm" (submit)="confirmPin()" *ngIf="!polls" class="form-inline justify-content-center">
+    <label for="pin" class="mr-sm-2">Enter your pin</label>
+    <input id="pin" formControlName="pin" class="form-control mr-sm-2">
+    <button class="btn btn-primary mt-2 mt-sm-0 flex-grow-1 flex-sm-grow-0" type="submit">{{'show-event.continue'|translate}}</button>
 </form>
 
 <div *ngIf="polls && polls.length > 0">
